Screen overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 #calculator {
-    width: 100%;
+    width: 22.5em;
     height: 100%;
     border-radius: 22px;
     display: block;
